[project]
name = "medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=0.5",
    "faiss-cpu>=1.13.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-groq>=0.3",
    "langchain-huggingface>=0.3",
    "langchain-text-splitters>=1.1.2",
    "numpy>=1.26,<2.3",
    "pandas>=2.2",
    "pydantic>=2.7",
    "pypdf>=6.10.2",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "sentence-transformers>=2.7",
    "streamlit>=1.30",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.40",
]
